--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<html>
+  <head>
+    <title>Calculator</title>
+  </head>
+  <body>
+    <header>
+      <h1>Calculator</h1>
+      <p>By Suhas G and Goutham R Gowda</p>
+    </header>
+  </body>
+</html>
