--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
       <h1>Calculator</h1>
       <p>By Suhas G and Goutham R Gowda</p>
     </header>
+    Addition:
+    <label>First Number:</label><input type="number" id="fnadd">
+    <label>Second Number:</label><input type="number" id="snadd">
   </body>
 </html>
