--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Calculator</title>
+    <style>
+      .header{
+              background-image: linear-gradient(#3f5efb, #fc466b, diagonal)
+      }
+    </style>
   </head>
   <body>
     <header>
