--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Calculator</title>
     <style>
       .header{
-              background-image: linear-gradient(#3f5efb, #fc466b, diagonal)
+              background-image: linear-gradient(diagonal, #3f5efb, #fc466b)
       }
     </style>
   </head>
