--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>Calculator</title>
     <style>
-      .header{
+      header{
               background-image: linear-gradient(to right, #3f5efb, #fc466b)
       }
     </style>
