--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>Calculator</title>
     <style>
       header{
-              background-image: linear-gradient(to right, #3f5efb, #fc466b)
+        background-image: linear-gradient(to right, #3f5efb, #fc466b)
+        color: white;
+        align: center;
       }
     </style>
   </head>
